# Windows-Automate

./: .gitignore  README.md  index.html  overlay.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 01_CODEBASE.md  03_VERSION_GUIDE.md  RELEASE_GUIDE.md  REQUIREMENTS.md
src/: App.tsx  index.css  main.tsx  overlay.css  overlay.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: config.rs  guides.rs  input.rs  llm.rs  mod.rs  overlay.rs  screen.rs
src-tauri/src/config/: mod.rs  storage.rs
src-tauri/src/guides/: mod.rs  search.rs  storage.rs
src-tauri/src/input/: keyboard.rs  mod.rs  mouse.rs
src-tauri/src/llm/: agent.rs  client.rs  mod.rs  types.rs
src-tauri/src/llm/agents/: guide_search.rs  mod.rs
src-tauri/src/llm/prompts/: builder.rs  mod.rs  system.rs
src-tauri/src/llm/runner/: agent_loop.rs  executor.rs  mod.rs
src-tauri/src/llm/tools/: keyboard.rs  mod.rs  mouse.rs  registry.rs  screen.rs  scroll.rs
src-tauri/src/screen/: capture.rs  mod.rs  ui_automation.rs
src/components/: AddGuide.tsx  Chat.tsx  ErrorBoundary.tsx  Settings.tsx  Toast.tsx  UpdateChecker.tsx
src/components/overlay/: ClickRipple.tsx  CursorGlow.tsx  OverlayApp.tsx  StatusIndicator.tsx
src/i18n/: en.json  index.ts  ko.json
src/stores/: chatStore.ts  configStore.ts  guideStore.ts  overlayStore.ts  toastStore.ts
